Day 21 fix day number z-index.

--- a/assets/sass/days/_021.scss
+++ b/assets/sass/days/_021.scss
@@ -14,6 +14,8 @@ $day-21-red-dark  : #b6050e;
   .day-number {
     color: $grey-light;
     border-color: $grey-light;
+    position: relative;
+    z-index: 2;
   }
 
   .day-scripture {
